# bolepen.ooo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.json5  .remarkignore  .remarkrc.mjs  Justfile  README.md  _headers  astro.config.mjs  astro.config.ts  config.toml  ec.config.mjs  mise.toml  netlify.toml  notebook.export.toml  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs  prettier.config.ts  pyproject.toml  tailwind.config.ts  tsconfig.json
.astro/: data-store.json  settings.json
.mise/: config.local.toml.example  config.toml
.mise/tasks/iosevka/: generate.bash  subsetting.bash
.zed/: settings.json
contrib/iosevka/: .gitignore  JOURNAL.md  README.md  handpick.py  listof.py  private-build-plans.toml  subsets.backup.toml  subsets.toml  subsetting.py
lib/: datetime.mjs  datetime.ts  types.ts  unicode.mjs  unicode.ts
lib/astro/: twemoji-assets.ts
lib/expressive-code/: plugin-placeholder-marker.ts
lib/shiki/: languages.ts
public/: _headers  browserconfig.xml  robots.txt  site.webmanifest  twemoji
public/assets/IosevkaCustom/: font.css
public/fonts/IosevkaCustom/: font.css
public/fonts/IosevkaCustomMono-33.2.7-1/: font.css
public/fonts/IosevkaCustomMono-33.2.7-2/: font.css
public/fonts/IosevkaCustomMono-33.2.7-3/: font.css
public/fonts/IosevkaCustomMono-34.7.0-1/: font.css
public/fonts/IosevkaCustomPropo-33.2.7-1/: font.css
public/fonts/IosevkaCustomPropo-33.2.7-2/: font.css
public/fonts/IosevkaCustomPropo-33.2.7-3/: font.css
public/fonts/IosevkaCustomPropo-34.7.0-1/: font.css
scripts/iosevka-fonts/: .gitignore  README.md  iosevka-subsetting.py  iosevka_subsetting.py  private-build-plans.toml  pyproject.toml  ranks.toml
src/: config.ts  env.d.ts  writeup.mdx
src/components/: Bole.astro  Highlight.astro  IPATranscript.astro  Icon.astro  IosevkaLigature.astro  LigatureSettings.astro  LinkButton.astro  Mute.astro  NoLig.astro  Smaller.astro
src/content/writeups/: fursona.mdx  hobbies.mdx
src/fonts/: FontLoading.astro  fallback.css  index.ts  iosevka.css
src/helpers/: tailwind.ts  types.ts
src/icons/: social.json
src/icons/iconify-tailwind/: index.ts
src/layouts/: Avatar.astro  BackToHome.astro  Banner.astro  BaseLayout.astro  Body.astro  Bole.astro  Copyright.astro  Footer.astro  Footnote.astro  Greetings.astro  Header.astro  InnerBodyWrapper.astro  InnerPara.astro  Layout.astro  Link.astro  MarkdownPage.astro  MediaLink.astro  MyCharRef.astro  MyHistory.astro  MyInterests.astro  MyParticipation.astro  MyShortBio.astro  ProfilePic.astro  Section.astro  ShortBio.astro  SocialButton.astro  SocialLinks.astro  TODO.astro  Writeup.astro
src/layouts/base/: Footer.astro  Layout.astro  Muted.astro  Smaller.astro  layout.astro
src/layouts/legacy/: Banner.astro  Layout.astro  ShortBio.astro  Writeup.astro
src/layouts/main/: Banner.astro  Bole.astro  IPATranscript.astro  Info.astro  ShortBio.astro  Writeup.astro  writeup.mdx
src/lib/: datetime.ts  fs.ts  iconify.ts  styling.ts  tailwind.ts  types.mjs  types.ts  unicode.ts
src/lib/expressive-code/: plugin-placeholder-marker.ts
src/lib/unified/: rehype-custom-alert.ts  rehype-custom-twemoji.ts  rehypeTwemoji.ts
src/pages/: 404.astro  _alt.astro  _links.astro  bole-character-sheet.astro  example.astro  index.astro  legacy.astro  links.astro  site.webmanifest.ts  social-media-policy.astro
src/scripts/: print.ts
src/shiki/: ayu-dark-modified.json  paxter.tmLanguage.json  pycon.tmLanguage.json  pytb.tmLanguage.json  rfc7468.tmLanguage.json
src/styles/: base.css  expressive-code.css  extra-fonts.css  fallback-fonts.css  fonts.css  fonts.ts  global.css  index.css  iosevka.css  markdown.css  prose.css  tailwind.config.ts  utilities.css
src/styles/iconify-tailwind/: index.ts  media.json  twemoji.json
src/styles/icons/: index.ts
src/utils/: images.ts
src/writeups/: 00_intro.mdx  01_hobbies.mdx  01_intro.mdx  02_fursona.mdx  02_hobbies.mdx  03_events.mdx  03_fursona.mdx  bole-character-sheet.mdx  home.mdx  social-media-policy.mdx
