[project]
name = "bolepen.ooo"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]

dependencies = [
    "brotli~=1.1",
    "fonttools~=4.53",
    "rich~=14.0",
    "textcase~=0.4.3",
    "tqdm~=4.66",
    "typer~=0.16",
]

[[authors]]
name = "That Charming BOLE"
email = "165321522+YtCharmyngeBole@users.noreply.github.com"

[dependency-groups]
dev = [
    "marimo>=0.14.10",
    "openai>=1.96.1",
    "pytest>=8.4.1",
    "python-lsp-server>=1.13.0",
    "ruff>=0.12.1",
    "sqlglot>=27.0.0",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
]

[tool.ruff]
line-length = 99
extend-exclude = ["**/vendor"]
required-version = ">=0.9.2"
src = ["src", "tests"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "preserve"

[tool.ruff.lint]
ignore = [
    "COM812", "EXE003", "ISC001", "PIE808",
    "RET505", "RET506", "RET507", "RET508",
]
select = [
    "F", "E", "W", "C90", "I", "UP", "YTT", "ASYNC", "S", "FBT003", "B",
    "A", "COM", "C4", "DTZ", "T10", "EXE", "FA", "ISC", "ICN", "LOG", "G",
    "PIE", "PYI", "PT", "RSE", "RET", "SLOT", "SIM101", "SIM105", "SIM107",
    "SIM110", "SIM113", "SIM115", "SIM117", "SIM118", "SIM2", "SIM3",
    "SIM4", "SIM9", "TID", "TCH", "INT", "PTH", "PD", "PGH", "PL", "FLY",
    "NPY", "PERF", "FURB", "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
mypy-init-return = true

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
datetime = "dt"

[tool.ruff.lint.flake8-quotes]
avoid-escape = false

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
strict = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
case-sensitive = true
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pylint]
max-args = 8
