[project]
name = "iosevka-fonts"
version = "0.1.0"
description = "Iosevka Subsetting Script"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "That Charming BOLE", email = "165321522+YtCharmyngeBole@users.noreply.github.com" },
]
dependencies = [
    "brotli~=1.1",
    "click~=8.1",
    "fonttools~=4.53",
    "tqdm~=4.66",
]

[project.scripts]
iosevka-subsetting = "iosevka_subsetting:program"

[tool.rye]
dev-dependencies = [
    "pyright>=1.1.371",
    "ruff>=0.5.1",
    "ruff-lsp>=0.0.54",
]
universal = true
generate-hashes = true
managed = true

[tool.hatch.build.targets.wheel]
packages = ["iosevka_subsetting.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#   ____          _         ___              _ _ _           _____           _
#  / ___|___   __| | ___   / _ \ _   _  __ _| (_) |_ _   _  |_   _|__   ___ | |___
# | |   / _ \ / _` |/ _ \ | | | | | | |/ _` | | | __| | | |   | |/ _ \ / _ \| / __|
# | |__| (_) | (_| |  __/ | |_| | |_| | (_| | | | |_| |_| |   | | (_) | (_) | \__ \
#  \____\___/ \__,_|\___|  \__\_\\__,_|\__,_|_|_|\__|\__, |   |_|\___/ \___/|_|___/
#                                                    |___/

[tool.pyright]
ignore = ["vendor"]
pythonVersion = "3.12"

[tool.ruff]
extend-exclude = ["venv", ".venv", "vendor"]
extend-include = ["*.ipynb"]
line-length = 119
required-version = ">=0.3.4"
#src = ["src", "tests"]
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"
quote-style = "preserve"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["COM812", "ISC001", "RET505", "RET506", "RET507", "RET508"]
select = [
    "F", "E", "W", "C90", "I", "UP", "ASYNC", "S", "FBT003", "B", "A",
    "COM", "C4", "FA", "ISC", "ICN", "G", "PT", "RSE", "RET", "SLOT",
    "SIM101", "SIM105", "SIM107", "SIM110", "SIM113", "SIM115", "SIM117",
    "SIM118", "SIM2", "SIM3", "SIM4", "SIM9", "TID", "TCH", "PTH", "PD", "PGH",
    "PL", "FLY", "PERF", "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
mypy-init-return = true

[tool.ruff.lint.flake8-gettext]
extend-function-names = ["ugettext"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
datetime = "dt"

[tool.ruff.lint.flake8-quotes]
avoid-escape = false

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
strict = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
case-sensitive = true
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pylint]
max-args = 8
